--- a/build.gradle
+++ b/build.gradle
@@ -28,3 +28,11 @@ test {
 application {
     mainClass = 'ui.Main'
 }
+
+jar {
+    manifest {
+        attributes(
+                'Main-Class': 'ui.Main'
+        )
+    }
+}
